--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,12 @@
 {
   "$schema": "./deno.schema.json",
-
+  "name": "@ptm/hono-blog",
+  "version": "0.0.1",
+  "exports": "./src/mod.ts",
+  "publish": {
+    "include": ["LICENSE", "deno.schema.json", "README.md", "src/*"],
+    "exclude": ["task", "app"]
+  },
   "tasks": {
     "start": "deno serve -A a.ts"
   },
