--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
-  "$schema": "./deno.schema.json",
+  "$schema": "https://img.phothin.dev/deno.schema.json",
   "name": "@ptm/hono-blog",
-  "version": "0.0.16",
+  "version": "0.0.18",
   "exports": "./src/mod.ts",
   "tasks": {
     "start": "deno serve -A a.ts"
